Inspections cleanup